--- a/src/projet_Resto_CIR3/ecran.fxml
+++ b/src/projet_Resto_CIR3/ecran.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="583.0" prefWidth="901.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="583.0" prefWidth="901.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projet_Resto_CIR3.Controller">
   <tabs>
     <Tab text="Serveur">
       <content>
@@ -298,54 +298,64 @@
                   <VBox layoutX="14.0" layoutY="14.0" prefHeight="256.0" prefWidth="159.0">
                      <children>
                         <Label prefHeight="17.0" prefWidth="162.0" text="Serveurs" />
-                        <ListView prefHeight="291.0" prefWidth="159.0" />
+                        <ListView fx:id="SLV" prefHeight="291.0" prefWidth="159.0" />
                      </children>
                   </VBox>
                   <VBox layoutX="173.0" layoutY="14.0" prefHeight="256.0" prefWidth="159.0">
                      <children>
                         <Label prefHeight="17.0" prefWidth="159.0" text="Barmans" />
-                        <ListView prefHeight="291.0" prefWidth="159.0" />
+                        <ListView fx:id="BLV" prefHeight="291.0" prefWidth="159.0" />
                      </children>
                   </VBox>
                   <VBox layoutX="332.0" layoutY="14.0" prefHeight="256.0" prefWidth="159.0">
                      <children>
                         <Label prefHeight="17.0" prefWidth="166.0" text="Cuisiniers" />
-                        <ListView prefHeight="291.0" prefWidth="159.0" />
+                        <ListView fx:id="CLV" prefHeight="291.0" prefWidth="159.0" />
                      </children>
                   </VBox>
                   <VBox layoutX="491.0" layoutY="14.0" prefHeight="256.0" prefWidth="159.0">
                      <children>
                         <Label prefHeight="17.0" prefWidth="178.0" text="Managers" />
-                        <ListView prefHeight="281.0" prefWidth="156.0" />
+                        <ListView fx:id="MLV" prefHeight="281.0" prefWidth="156.0" />
                      </children>
                   </VBox>
                   <VBox layoutX="14.0" layoutY="270.0" prefHeight="256.0" prefWidth="159.0">
                      <children>
                         <Label prefHeight="17.0" prefWidth="162.0" text="Serveurs qui travaillent" />
-                        <ListView prefHeight="291.0" prefWidth="159.0" />
+                        <ListView fx:id="STLV" prefHeight="291.0" prefWidth="159.0" />
                      </children>
                   </VBox>
                   <VBox layoutX="173.0" layoutY="270.0" prefHeight="256.0" prefWidth="159.0">
                      <children>
                         <Label prefHeight="17.0" prefWidth="159.0" text="Barmans qui travaillent" />
-                        <ListView prefHeight="291.0" prefWidth="159.0" />
+                        <ListView fx:id="BTLV" prefHeight="291.0" prefWidth="159.0" />
                      </children>
                   </VBox>
                   <VBox layoutX="332.0" layoutY="270.0" prefHeight="256.0" prefWidth="159.0">
                      <children>
                         <Label prefHeight="17.0" prefWidth="166.0" text="Cuisiniers qui travaillent" />
-                        <ListView prefHeight="291.0" prefWidth="159.0" />
+                        <ListView fx:id="CTLV" prefHeight="291.0" prefWidth="159.0" />
                      </children>
                   </VBox>
                   <VBox layoutX="491.0" layoutY="270.0" prefHeight="256.0" prefWidth="159.0">
                      <children>
                         <Label prefHeight="17.0" prefWidth="178.0" text="Managers qui travaillent" />
-                        <ListView prefHeight="281.0" prefWidth="156.0" />
+                        <ListView fx:id="MTLV" prefHeight="281.0" prefWidth="156.0" />
                      </children>
                   </VBox>
-                  <Button layoutX="665.0" layoutY="119.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="220.0" text="Lancer service" />
-                  <Label alignment="CENTER" layoutX="661.0" layoutY="225.0" prefHeight="105.0" prefWidth="227.0" />
-                  <Button layoutX="665.0" layoutY="501.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="220.0" text="Voir factures" />
+                  <Button layoutX="665.0" layoutY="31.0" mnemonicParsing="false" onAction="#LanceService" prefHeight="47.0" prefWidth="220.0" text="Lancer service" />
+                  <Label fx:id="servLanceLabel" alignment="TOP_LEFT" layoutX="662.0" layoutY="126.0" prefHeight="281.0" prefWidth="227.0" />
+                  <Button layoutX="665.0" layoutY="501.0" mnemonicParsing="false" onAction="#affFactures" prefHeight="25.0" prefWidth="220.0" text="Voir factures" />
+                  <Button layoutX="665.0" layoutY="411.0" mnemonicParsing="false" onAction="#swapWorkers" prefHeight="74.0" prefWidth="73.0">
+                     <graphic>
+                        <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/Vector-Arrow-Up-Transparent-PNG.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button layoutX="665.0" layoutY="84.0" mnemonicParsing="false" onAction="#finService" prefHeight="47.0" prefWidth="220.0" text="Finir le service" />
                </children>
             </AnchorPane>
          </content>
